rns-lang/tests/snapshots/error-lexer-integers-overflow_negative_werror.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code -99999999999999999999
----- STDERR -----
Error: invalid integer
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/integers/overflow_negative.ja:1:7 ]
   │
 1 │ .code -99999999999999999999
   │       ──────────┬──────────  
   │                 ╰──────────── integer '-99999999999999999999' is too large for a 32-bit signed integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
