rns-lang/tests/snapshots/error-lexer-strings-long_unterminated_string_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with no ending quote 4444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444
.end
----- STDERR -----
[E001] Error: unterminated string literal
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/strings/long_unterminated_string.ja:2:1 ]
   │
 2 │ "String with no ending quote 4444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
